# world-quant-brain-mcp

./: .env.example  .gitignore  DOCKER_FIX_SUMMARY.md  Dockerfile  LICENSE  MCP_TROUBLESHOOTING_GUIDE.md  Makefile  QUICK_START_GUIDE.md  README.md  README_CONTAINER.md  TEST_SUMMARY.txt  diagnose_mcp_issue.sh  docker-compose.yml  forum_functions.py  main.py  pyproject.toml  requirements.txt  test_mcp_forum_search.py  test_mcp_health.sh
deploy/nginx/: mcp_http.conf
deploy/systemd/: mcp-http.service  mcp-sse.service
examples/: README.md  claude_desktop_config.json
worldquant_brain_mcp/: __init__.py  client.py  server.py
